--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="dint_receive_the_otp">Didn\'t receive the otp?</string>
     <string name="resend_otp">Resend Otp</string>
     <string name="enter_your_name">Enter your name</string>
+    <string name="age">Age</string>
 </resources>
