--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,17 @@
     <string name="resend_otp">Resend Otp</string>
     <string name="enter_your_name">Enter your name</string>
     <string name="age">Age</string>
+    <string name="height">Height</string>
+    <string name="weight">Weight</string>
+    <string name="continue_">Continue</string>
+    <string name="about_you">About you</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="top_personal_trainers">Top Personal Trainers</string>
+    <string name="view_all">View All</string>
+    <string name="book">Book</string>
+    <string name="home">Home</string>
+    <string name="membership">Membership</string>
+    <string name="workout">Workout</string>
+    <string name="diet">Diet</string>
 </resources>
