--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,8 @@
     <string name="hey_name">Hey, [x]</string>
     <string name="welcome_to_diva_fitness">Welcome to Diva Fitness</string>
     <string name="no_diet_available">No Diet Plan Available</string>
+    <string name="save">Save</string>
+    <string name="edit_diet_plan">Edit Diet Plan</string>
 
 
 </resources>
