--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -106,5 +106,6 @@
     <string name="select_center">Select Center</string>
     <string name="apply_filter">Apply</string>
     <string name="clear_filter">Clear Filter</string>
+    <string name="type_message">Type message</string>
 
 </resources>
