--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -107,6 +107,17 @@
     <string name="apply_filter">Apply</string>
     <string name="clear_filter">Clear Filter</string>
     <string name="type_message">Type message</string>
+    <string name="specialising_in">Specialising in</string>
+    <string name="select_tenure">Select Tenure</string>
+    <string name="packages">Package</string>
+    <string name="per_session">Per Session</string>
+    <string name="read_policy">Read Policy</string>
+    <string name="only_me">Only Me</string>
+    <string name="with_my_friends">With My Friends</string>
+    <string name="no_of_people">No of people</string>
+    <string name="about_trainer">About Trainer</string>
+    <string name="i_will_join_from">I will join from</string>
+    <string name="select_slots">Select Slots</string>
 
 
 </resources>
