--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -118,6 +118,9 @@
     <string name="about_trainer">About Trainer</string>
     <string name="i_will_join_from">I will join from</string>
     <string name="select_slots">Select Slots</string>
+    <string name="month">Month</string>
+    <string name="selected">Selected</string>
+    <string name="no_of_session">No. of session</string>
 
 
 </resources>
