--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -31,7 +31,7 @@
     <string name="membership">Membership</string>
     <string name="workout">Workout</string>
     <string name="diet">Diet</string>
-
+    <string name="sar">SAR </string>
     <string name="enable_your_location">Enable Your Location</string>
     <string name="ok">Ok</string>
     <string name="no">No</string>
