15/03/2021 handle booking slots

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,8 @@
     <string name="selected">Selected</string>
     <string name="no_of_session">No. of session</string>
     <string name="confirm">Confirm</string>
+    <string name="selected_slots">Selected Slots</string>
+    <string name="booking_summary">Booking Summary</string>
 
 
 </resources>
