--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -122,6 +122,8 @@
     <string name="selected">Selected</string>
     <string name="no_of_session">No. of session</string>
     <string name="confirm">Confirm</string>
+    <string name="selected_slots">Selected Slots</string>
+    <string name="booking_summary">Booking Summary</string>
 
 
 </resources>
