--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,7 @@
     <string name="tenure">Tenure</string>
     <string name="joining_from">Joining from</string>
     <string name="remove">Remove</string>
+    <string name="personal_trainer">Personal Trainer</string>
 
 
 </resources>
