16/03/2021 working on Summary Screen

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -32,6 +32,7 @@
     <string name="workout">Workout</string>
     <string name="diet">Diet</string>
     <string name="sar">SAR </string>
+    <string name="for_package">for</string>
     <string name="enable_your_location">Enable Your Location</string>
     <string name="ok">Ok</string>
     <string name="no">No</string>
@@ -128,6 +129,14 @@
     <string name="joining_from">Joining from</string>
     <string name="remove">Remove</string>
     <string name="personal_trainer">Personal Trainer</string>
+    <string name="payable_amt">Payable Amount</string>
+    <string name="auto_renew_membership">Auto Renew membership</string>
+    <string name="package_membership">Plus [X] package</string>
+    <string name="please_select_slots">Please select slots</string>
+    <string name="booking_successfully">Booking Successfully!</string>
+    <string name="your_booking_confirm">Your booking has been confirm</string>
+    <string name="my_booking">My Bookings</string>
+    <string name="back_to_home">Back to home</string>
 
 
 </resources>
