--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -139,6 +139,7 @@
     <string name="back_to_home">Back to home</string>
     <string name="select_branch">Select Branch</string>
     <string name="i_need_personal_trainer">I need Personal Trainer</string>
+    <string name="choose_center">Choose the Center</string>
 
 
 </resources>
