--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="about_app">About App</string>
     <string name="logout">Logout</string>
     <string name="sar_amount">SAR [X]/session</string>
+    <string name="pay_sar">Pay SAR [X]</string>
     <string name="sar">SAR </string>
     <string name="skip">skip</string>
     <string name="for_package">for</string>
@@ -131,6 +132,7 @@
     <string name="payable_amt">Payable Amount</string>
     <string name="auto_renew_membership">Auto Renew membership</string>
     <string name="package_membership">Plus [X] package</string>
+
     <string name="please_select_slots">Please select slots</string>
     <string name="booking_successfully">Booking Successfully!</string>
     <string name="your_booking_confirm">Your booking has been confirm</string>
@@ -139,6 +141,9 @@
     <string name="select_branch">Select Branch</string>
     <string name="i_need_personal_trainer">I need Personal Trainer</string>
     <string name="choose_center">Choose the Center</string>
+    <string name="vat">VAT</string>
+    <string name="people">People</string>
+    <string name="session">Session</string>
 
 
 </resources>
