--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,6 +144,8 @@
     <string name="vat">VAT</string>
     <string name="people">People</string>
     <string name="session">Session</string>
+    <string name="upcoming">Upcoming</string>
+    <string name="completed">Completed</string>
 
 
 </resources>
