--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,6 +152,7 @@
     <string name="cancel_pt">Cancel PT</string>
     <string name="booking_date">Booking Date;</string>
     <string name="paid">Paid</string>
+    <string name="discount">Discount</string>
 
 
 </resources>
