--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,6 +158,7 @@
     <string name="rate_now">Rate Now</string>
     <string name="please_buy_membership">Please Buy Membership</string>
     <string name="please_buy_membership_des">Please buy membership for booking with any personal trainer</string>
+    <string name="selected_center">Selected Center</string>
 
 
 </resources>
