--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,6 +159,7 @@
     <string name="please_buy_membership">Please Buy Membership</string>
     <string name="please_buy_membership_des">Please buy membership for booking with any personal trainer</string>
     <string name="selected_center">Selected Center</string>
+    <string name="no_completed_booking">No Completed Booking</string>
 
 
 </resources>
