--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,6 +172,10 @@
     <string name="day_rest">Day Rest</string>
     <string name="reps">Reps</string>
     <string name="set">Set</string>
+    <string name="burns">Burns</string>
+    <string name="select_slot">[X] Slots</string>
+    <string name="g">g</string>
+    <string name="on_rest">On Rest</string>
 
 
 </resources>
