--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,7 @@
     <string name="select_slot">[X] Slots</string>
     <string name="g">g</string>
     <string name="on_rest">On Rest</string>
+    <string name="am_on_rest">I am on rest!</string>
 
 
 </resources>
